Create knex setup file, start migrations

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "knex": "^0.15.2",
+    "pg": "^7.7.1",
     "uuid": "^3.3.2"
   }
 }
